--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host 0.0.0.0",
     "build": "vite build",
     "preview": "vite preview"
   },
@@ -15,10 +15,12 @@
     "remark-breaks": "^4.0.0",
     "remark-html": "^16.0.1",
     "remark-parse": "^11.0.0",
+    "socket.io-client": "^4.8.1",
     "unified": "^11.0.5",
     "vue": "^3.5.12",
-    "vue-router": "^4.4.5",
-    "vue-textarea-autosize": "^1.1.1"
+    "vue-router": "^4.5.0",
+    "vue-textarea-autosize": "^1.1.1",
+    "vuetify": "^3.7.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
