--- a/package.json
+++ b/package.json
@@ -9,12 +9,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/vue": "^2.2.0",
+    "@primevue/themes": "^4.2.5",
+    "bootstrap-icons": "^1.11.3",
+    "dotenv": "^16.4.7",
     "element-plus": "^2.9.0",
     "markdown-it": "^14.1.0",
     "marked": "^15.0.2",
+    "primeicons": "^7.0.0",
+    "primevue": "^4.2.5",
     "remark-breaks": "^4.0.0",
     "remark-html": "^16.0.1",
     "remark-parse": "^11.0.0",
+    "showdown": "^2.1.0",
     "socket.io-client": "^4.8.1",
     "unified": "^11.0.5",
     "vue": "^3.5.12",
@@ -25,7 +32,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
     "autoprefixer": "^10.4.20",
-    "naive-ui": "^2.40.2",
+    "naive-ui": "^2.40.4",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.15",
     "vite": "^5.4.10",
