--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "vue": "^3.5.12",
     "vue-router": "^4.5.0",
     "vue-textarea-autosize": "^1.1.1",
-    "vuetify": "^3.7.5"
+    "vuetify": "^3.7.5",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
