--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "remark-parse": "^11.0.0",
     "showdown": "^2.1.0",
     "socket.io-client": "^4.8.1",
+    "typeface-montserrat": "^1.1.13",
     "unified": "^11.0.5",
     "vue": "^3.5.12",
     "vue-router": "^4.5.0",
